<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mbari.vars</groupId>
  <artifactId>vars-annotation</artifactId>
  <version>1.1.5-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>org.mbari.vars.core</module>
    <module>org.mbari.vars.services</module>
    <module>org.mbari.vars.ui</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <!-- dependency versions -->
    <activation.version>1.2.2</activation.version>
    <auth0.version>3.18.3</auth0.version>
    <caffeine.version>3.0.5</caffeine.version>
    <config.version>1.4.1</config.version>
    <controlsfx.version>11.1.1</controlsfx.version>
    <gson.version>2.8.9</gson.version>
    <gsontime.version>1.1.1</gsontime.version>
    <ikonli.version>12.3.0</ikonli.version>
    <imgfx.version>0.0.13</imgfx.version>
    <inject.version>1</inject.version>
    <jackson.version>2.13.1</jackson.version>
    <jansi.version>2.4.0</jansi.version>
    <javafx.version>17.0.2</javafx.version>
    <jeromq.version>0.5.2</jeromq.version>
    <jersey.version>2.29</jersey.version>
    <jfoenix.version>9.0.10</jfoenix.version>
    <junit.version>4.13.2</junit.version>
    <jupiter.version>5.8.2</jupiter.version>
    <logback.version>1.3.0-alpha12</logback.version>
    <mbarix4j.version>2.0.5.jre11</mbarix4j.version>
    <medusa.version>16.0.0</medusa.version>
    <okhttplog.version>3.14.4</okhttplog.version>
    <retrofit.version>2.9.0</retrofit.version>
    <retrofitgson.version>2.9.0</retrofitgson.version>
    <rxjava2.version>2.2.21</rxjava2.version>
    <servlet.version>4.0.1</servlet.version>
    <slf4j.version>2.0.0-alpha6</slf4j.version>
    <vcr4j.version>4.4.1.jre11</vcr4j.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>${slf4j.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk-platform-logging</artifactId>
      <version>${slf4j.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.fusesource.jansi</groupId>
      <artifactId>jansi</artifactId>
      <version>${jansi.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <version>${jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>github</id>
      <name>github</name>
      <url>https://maven.pkg.github.com/mbari-org/maven</url>
    </repository>
  </repositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>